parScore, newLtc, partial predeal